@@ -1,5 +1,14 @@
 2007-10-13  Dan Williams  <dcbw@redhat.com>
 
+	* src/wireless-security/Makefile.am
+	  src/wireless-security/ws-wep-passphrase.c
+	  src/wireless-security/ws-wep-passphrase.h
+	  src/wirelees-security/wireless-security.h
+	  src/wireless-dialog.c
+		- Add WEP passphrase support
+
+2007-10-13  Dan Williams  <dcbw@redhat.com>
+
 	* src/utils/Makefile.am
 	  src/Makefile.am
 	  configure.ac
